<resources>
    <string name="app_name">BakenArt</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item1">item1</string>
    <string name="item2">item2</string>
    <string name="item4">Item4</string>
    <string name="item3">Item3</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="todo">TODO</string>
    <string name="Category">Категории</string>
    <string name="orderfragment">orderFragment</string>
    <string name="textview">TextView</string>
    <string name="eleted">Название Продукта</string>
    <string name="text_description">Описание</string>
    <string name="baskrt_title">Корзина</string>
    <string name="full_name">Full Name</string>
    <string name="price">Price</string>
    <string name="picture">Picture</string>
    <string name="add_to_database">Add to DataBase</string>
    <string name="add">Add</string>
    <string name="description_rus">Описание:</string>
    <string name="product_rus">Продукты</string>

    <string-array name="list_0_10">
        <item name1="1">1</item>
        <item name1="2">2</item>
        <item name1="3">3</item>
        <item name1="4">4</item>
        <item name1="5">5</item>
        <item name1="6">6</item>
        <item name1="7">7</item>
        <item name1="8">8</item>
        <item name1="9">9</item>
        <item name1="10">10</item>
    </string-array>
    <integer-array name="lsitnum">

    </integer-array>
</resources>
